--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,12 +38,12 @@ embedded-can = { version = "0.4" }
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 heapless = { version = "0.8", default-features = false }
 static_cell = "2.0.0"
+embedded-io-async = "0.6.1"
 
 [patch.crates-io]
 embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
 embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
 embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
-
 
 [profile.release]
 lto = "fat"
