--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-embassy-stm32 = { version = "0.1.0", features = [
+embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e", features = [
     "defmt",
     "time-driver-any",
     "stm32g474re",
@@ -13,19 +13,19 @@ embassy-stm32 = { version = "0.1.0", features = [
     "unstable-pac",
     "exti",
 ] }
-embassy-sync = { version = "0.6.0", features = ["defmt"] }
-embassy-executor = { version = "0.6.0", features = [
+embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e", features = [
     "arch-cortex-m",
     "executor-thread",
     "defmt",
     "integrated-timers",
 ] }
-embassy-time = { version = "0.3.2", features = [
+embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e", features = [
     "defmt",
     "defmt-timestamp-uptime",
     "tick-hz-32_768",
 ] }
 
+embassy-sync = { version = "0.6.0", features = ["defmt"] }
 embassy-futures = { version = "0.1.1" }
 
 defmt = "0.3"
@@ -39,11 +39,6 @@ panic-probe = { version = "0.3", features = ["print-defmt"] }
 heapless = { version = "0.8", default-features = false }
 static_cell = "2.0.0"
 embedded-io-async = "0.6.1"
-
-[patch.crates-io]
-embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
-embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
-embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
 
 [profile.release]
 lto = "fat"
