--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e", features = [
+embassy-stm32 = { version = "0.1.0", features = [
     "defmt",
     "time-driver-any",
     "stm32g474re",
@@ -13,20 +13,20 @@ embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370
     "unstable-pac",
     "exti",
 ] }
-embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e", features = [
+embassy-executor = { version = "0.6.0", features = [
     "arch-cortex-m",
     "executor-thread",
     "defmt",
     "integrated-timers",
 ] }
-embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e", features = [
+embassy-time = { version = "0.3.2", features = [
     "defmt",
     "defmt-timestamp-uptime",
     "tick-hz-32_768",
 ] }
-
 embassy-sync = { version = "0.6.0", features = ["defmt"] }
 embassy-futures = { version = "0.1.1" }
+embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
 
 defmt = "0.3"
 defmt-rtt = "0.4"
@@ -37,8 +37,17 @@ embedded-hal = "0.2.6"
 embedded-can = { version = "0.4" }
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 heapless = { version = "0.8", default-features = false }
-static_cell = "2.0.0"
 embedded-io-async = "0.6.1"
+static_cell = "2.1"
+embedded-hal-async = "1.0.0"
+
+[patch.crates-io]
+embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
+embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
+embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
+embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
+embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
+embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
 
 [profile.release]
 lto = "fat"
