--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,6 @@
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
 # replace STM32G071C8Rx with your chip as listed in `probe-rs chip list`
-runner = "probe-rs run --chip STM32G474RETx"
+runner = "probe-rs run --chip STM32G474RETx --connect-under-reset"
 
 [build]
 target = "thumbv7em-none-eabi"
